--- a/sourceCode/templates/contact.html
+++ b/sourceCode/templates/contact.html
@@ -189,7 +189,7 @@
                             <h3>About Us</h3>
                             <p>BBDITM Lucknow.</p>
                             <ul>
-                                <li><i class="fa fa-phone"></i> <a href="callto:+91-9670250845">+91-9670250845</a></li>
+                                <li><i class="fa fa-phone"></i> <a href="callto:+91-">+91-</a></li>
                                 <li><i class="fa fa-map-marker"></i> <a href="mailto:muskang2898@gmail.com">muskang2898@gmail.com</a></li>
                                 <li><i class="fa fa-phone"></i> Lucknow, 226004, India.</li>
                             </ul>
